grammars/noir/grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) =>
      choice(
        $.function_definition,
        $.struct_definition,
        $.impl_block,
        $.trait_definition,
        $.type_alias,
        $.module_declaration,
        $.use_declaration,
        $.global_declaration
      ),

    // Attributes
    function_definition: ($) =>
      seq(
        repeat($.attribute),
        optional($.visibility_modifier),
        optional("unconstrained"),
        optional("comptime"),
        "fn",
        field("name", $.identifier),
        optional($.type_parameters),
        $.parameters,
        optional(seq("->", field("return_type", $._type))),
        optional($.where_clause),
        $.block
      ),

    parameters: ($) =>
      seq("(", optional(seq($.parameter, repeat(seq(",", $.parameter)), optional(","))), ")"),

    _type: ($) =>
      choice(
        $.primitive_type,
        $.type_identifier,
        $.generic_type,
        $.scoped_type_identifier,
        $.reference_type,
        $.mutable_reference_type,
        $.array_type,
        $.slice_type,
        $.tuple_type,
        $.function_type,
        $.unit_type,
        $.parenthesized_type
      ),

    primitive_type: (_) =>
      choice(
        "Field",
        "bool",
        "u1",
        "u8",
        "u16",
        "u32",
        "u64",
        "u128",
        "i8",
        "i16",
        "i32",
        "i64",
        "i128",
        "str",
        "fmtstr"
      ),

    type_identifier: (_) => /[A-Z][a-zA-Z0-9_]*/,

    pattern: ($) =>
      choice(
        $.identifier,
        $.tuple_pattern,
        $.struct_pattern,
        $.wildcard_pattern,
        $.mut_pattern,
        $.reference_pattern
      ),

    block: ($) => seq("{", repeat($._statement), optional($._expression), "}"),

    _statement: ($) =>
      choice(
        $.let_statement,
        $.expression_statement,
        $.for_statement,
        $.loop_statement,
        $.while_statement,
        $.return_statement,
        $.break_statement,
        $.continue_statement,
        $.assert_statement,
        $.constrain_statement,
        $.if_expression,
        $.match_expression,
        $._item
      ),

    expression_statement: ($) => seq($._expression, ";"),

    _expression: ($) =>
      choice(
        $.identifier,
        $.scoped_identifier,
        $.self_expression,
        $._literal,
        $.unary_expression,
        $.binary_expression,
        $.call_expression,
        $.method_call_expression,
        $.field_expression,
        $.index_expression,
        $.array_expression,
        $.tuple_expression,
        $.struct_expression,
        $.if_expression,
        $.match_expression,
        $.closure_expression,
        $.block,
        $.parenthesized_expression,
        $.cast_expression,
        $.reference_expression,
        $.dereference_expression,
        $.range_expression,
        $.unit_expression,
        $.generic_function,
        $.comptime_expression,
        $.unsafe_expression,
        $.quote_expression
      ),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    integer_literal: (_) =>
      token(
        choice(
          /0x[0-9a-fA-F_]+/,
          /0b[01_]+/,
          /0o[0-7_]+/,
          /[0-9][0-9_]*/
        )
      ),

    boolean_literal: (_) => choice("true", "false"),

    unary_expression: ($) =>
      prec(
        PREC.unary,
        seq(choice("-", "!", "&", "&mut", "*"), $._expression)
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["+", PREC.additive],
          ["-", PREC.additive],
          ["*", PREC.multiplicative],
          ["/", PREC.multiplicative],
          ["%", PREC.multiplicative],
          ["==", PREC.comparative],
          ["!=", PREC.comparative],
          ["<", PREC.comparative],
          [">", PREC.comparative],
          ["<=", PREC.comparative],
          [">=", PREC.comparative],
          ["&&", PREC.and],
          ["||", PREC.or],
          ["&", PREC.bitand],
          ["|", PREC.bitor],
          ["^", PREC.bitxor],
          ["<<", PREC.shift],
          [">>", PREC.shift],
          ["=", PREC.assign],
          ["+=", PREC.assign],
          ["-=", PREC.assign],
          ["*=", PREC.assign],
          ["/=", PREC.assign],
          ["%=", PREC.assign],
          ["&=", PREC.assign],
          ["|=", PREC.assign],
          ["^=", PREC.assign],
          ["<<=", PREC.assign],
          [">>=", PREC.assign],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", operator),
              field("right", $._expression)
            )
          )
        )
      ),

    call_expression: ($) =>
      prec(
        PREC.call,
        seq(
          field("function", $._expression),
          "(",
          optional(seq($._expression, repeat(seq(",", $._expression)), optional(","))),
          ")"
        )
      ),

    method_call_expression: ($) =>
      prec(
        PREC.call,
        seq(
          field("receiver", $._expression),
          ".",
          field("method", $.identifier),
          optional($.type_arguments),
          "(",
          optional(seq($._expression, repeat(seq(",", $._expression)), optional(","))),
          ")"
        )
      ),

    field_expression: ($) =>
      prec(
        PREC.field,
        seq(field("value", $._expression), ".", field("field", choice($.identifier, $.integer_literal)))
      ),

    index_expression: ($) =>
      prec(
        PREC.call,
        seq(field("value", $._expression), "[", field("index", $._expression), "]")
      ),

    array_expression: ($) =>
      seq(
        "[",
        choice(
          seq($._expression, repeat(seq(",", $._expression)), optional(",")),
          seq($._expression, ";", $._expression)
        ),
        "]"
      ),

    tuple_expression: ($) =>
      seq("(", $._expression, repeat1(seq(",", $._expression)), optional(","), ")"),

    struct_expression: ($) =>
      seq(
        field("name", choice($.type_identifier, $.scoped_type_identifier, $.generic_type)),
        "{",
        optional(seq($.field_initializer, repeat(seq(",", $.field_initializer)), optional(","))),
        "}"
      ),

    field_initializer: ($) =>
      choice(seq($.identifier, ":", $._expression), $.identifier),

    closure_expression: ($) =>
      prec.left(
        PREC.call,
        seq(
          "|",
          optional(seq($.closure_parameter, repeat(seq(",", $.closure_parameter)), optional(","))),
          "|",
          optional(seq("->", $._type)),
          choice($.block, $._expression)
        )
      ),

    closure_parameter: ($) =>
      seq(optional("mut"), $.pattern, optional(seq(":", $._type))),

    cast_expression: ($) =>
      prec(PREC.cast, seq($._expression, "as", $._type)),

    range_expression: ($) =>
      prec.left(
        PREC.range,
        choice(
          seq($._expression, "..", $._expression),
          seq($._expression, ".."),
          seq("..", $._expression),
          ".."
        )
      ),
